<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".TestAccuracy">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/divider"
        android:dividerPadding="-8dp"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingTop="8dp"
        android:paddingRight="24dp"
        android:showDividers="middle"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/detected_networks_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detected_networks"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

            <ListView
                android:id="@+id/networkListView"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:layout_marginTop="8dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/angle"
                android:text="@string/angle_label"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/angle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:autofillHints="ref_x"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:text="@string/zero" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/reference_x"
                    android:text="@string/ref_x"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/reference_x"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:autofillHints="ref_x"
                    android:gravity="center"
                    android:inputType="numberDecimal"
                    android:text="@string/zero" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/reference_y"
                    android:text="@string/reference_y"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/reference_y"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:autofillHints="ref_y"
                    android:gravity="center"
                    android:inputType="numberDecimal"
                    android:text="@string/zero" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/estimate_x"
                    android:text="@string/est_x"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/estimate_x"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:autofillHints="estimate_x"
                    android:gravity="center"
                    android:inputType="numberDecimal"
                    android:text="@string/zero" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/estimate_y"
                    android:text="@string/est_y"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/estimate_y"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:autofillHints="estimate_y"
                    android:gravity="center"
                    android:inputType="numberDecimal"
                    android:text="@string/zero" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/error"
                    android:text="@string/error"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/error"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:autofillHints="error"
                    android:gravity="center"
                    android:inputType="numberDecimal"
                    android:text="@string/zero" />
            </LinearLayout>



            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:columnCount="3"
                android:rowCount="3">

                <Button
                    android:id="@+id/up_arrow"
                    android:layout_width="50dp"
                    android:layout_height="60dp"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:text="@string/up_arrow" />

                <Button
                    android:id="@+id/left_arrow"
                    android:layout_width="50dp"
                    android:layout_height="60dp"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:layout_marginEnd="8dp"
                    android:text="@string/left_arrow" />

                <Button
                    android:id="@+id/right_arrow"
                    android:layout_width="50dp"
                    android:layout_height="60dp"
                    android:layout_row="1"
                    android:layout_column="2"
                    android:layout_marginStart="8dp"
                    android:text="@string/right_arrow" />

                <Button
                    android:id="@+id/down_arrow"
                    android:layout_width="50dp"
                    android:layout_height="60dp"
                    android:layout_row="2"
                    android:layout_column="1"
                    android:text="@string/down_arrow" />


            </GridLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/check_location_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="@string/refresh" />

        </LinearLayout>

        <ToggleButton
            android:id="@+id/auto_refresh"
            style="@android:style/Widget.Material.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:textOff="@string/auto_refresh_amp_submit_off"
            android:textOn="@string/auto_refresh_amp_submit_on" />


    </LinearLayout>
</LinearLayout>
